--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
 					<header class="header">
 						<div class="header__container">
 							<a href="#" class="header__logo">
-								<picture>
-									<source srcset="/img/logo-black.png" type="image/png" media="(min-width:769px)">
-									<source srcset="/img/logo-black.png" type="image/png" media="(max-width:768px)">
-									<img src="/img/logo.-black.png" alt="logo">
-								</picture>
+								<img src="https://rkozhan.github.io/ace-studio/img/logo-black.png" alt="logo">
 							</a>
 							<div class="header__menu menu">
 								<div class="menu__icon">
@@ -95,13 +91,13 @@
 						<div thumbsSlider="" class="logo-slider swiper">
 							<div class="logo-slider__wrapper swiper-wrapper">
 								<div class="logo-slider__slide swiper-slide">
-									<img src="/img/top-slider/img-1.jpg" />
+									<img src="https://rkozhan.github.io/ace-studio/img/top-slider/img-1.jpg" />
 								</div>
 								<div class="logo-slider__slide swiper-slide">
-									<img src="/img/top-slider/img-2.jpg" />
+									<img src="https://rkozhan.github.io/ace-studio/img/top-slider/img-2.jpg" />
 								</div>
 								<div class="logo-slider__slide swiper-slide">
-									<img src="/img/top-slider/img-3.jpg" />
+									<img src="https://rkozhan.github.io/ace-studio/img/top-slider/img-3.jpg" />
 								</div>
 
 							</div>
@@ -117,26 +113,26 @@
 							<!-- Slides -->
 							<div class="logo-slider2__slide swiper-slide">
 								<div class="logo-slider2__image _ibg">
-									<img src="/img/top-slider/ts-bg1.jpg" alt="">
+									<img src="https://rkozhan.github.io/ace-studio/img/top-slider/ts-bg1.jpg" alt="">
 									<a href="#" class="logo-slider2__logo">
-										<img src="/img/logo.png" alt="">
+										<img src="https://rkozhan.github.io/ace-studio/img/logo.png" alt="">
 									</a>
 								</div>
 
 							</div>
 							<div class="logo-slider2__slide swiper-slide">
 								<div class="logo-slider2__image _ibg">
-									<img src="/img/top-slider/ts-bg2.jpg" alt="">
+									<img src="https://rkozhan.github.io/ace-studio/img/top-slider/ts-bg2.jpg" alt="">
 									<a href="#" class="logo-slider2__logo">
-										<img src="/img/logo.png" alt="">
+										<img src="https://rkozhan.github.io/ace-studio/img/logo.png" alt="">
 									</a>
 								</div>
 							</div>
 							<div class="logo-slider2__slide swiper-slide">
 								<div class="logo-slider2__image _ibg">
-									<img src="/img/top-slider/ts-bg3.jpg" alt="">
+									<img src="https://rkozhan.github.io/ace-studio/img/top-slider/ts-bg3.jpg" alt="">
 									<a href="#" class="logo-slider2__logo">
-										<img src="/img/logo.png" alt="">
+										<img src="https://rkozhan.github.io/ace-studio/img/logo.png" alt="">
 									</a>
 								</div>
 							</div>
@@ -158,14 +154,14 @@
 						<div class="photos-about__col">
 							<div class="photos-about__card">
 								<div class="photos-about__photo _ibg">
-									<img src="/img/about/a-1.jpg" alt="">
+									<img src="https://rkozhan.github.io/ace-studio/img/about/a-1.jpg" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="photos-about__col">
 							<div class="photos-about__card">
 								<div class="photos-about__photo _ibg">
-									<img src="/img/about/a-2.jpg" alt="">
+									<img src="https://rkozhan.github.io/ace-studio/img/about/a-2.jpg" alt="">
 								</div>
 							</div>
 						</div>
@@ -264,7 +260,7 @@
 							<div class="reviews__slider_slide slide-reviews swiper-slide">
 								<div class="slide-reviews__container">
 									<div class="slide-reviews__img _ibg">
-										<img src="/img/reviews/client-1.jpg" alt="client">
+										<img src="https://rkozhan.github.io/ace-studio/img/reviews/client-1.jpg" alt="client">
 									</div>
 									<div class="slide-reviews__name">Believable</div>
 									<div class="slide-reviews__text">
@@ -280,7 +276,7 @@
 							<div class="reviews__slider_slide slide-reviews swiper-slide">
 								<div class="slide-reviews__container">
 									<div class="slide-reviews__img _ibg">
-										<img src="/img/reviews/client-2.jpg" alt="client">
+										<img src="https://rkozhan.github.io/ace-studio/img/reviews/client-2.jpg" alt="client">
 									</div>
 									<div class="slide-reviews__name">Unbelievable</div>
 									<div class="slide-reviews__text">
@@ -293,7 +289,7 @@
 							<div class="reviews__slider_slide slide-reviews swiper-slide">
 								<div class="slide-reviews__container">
 									<div class="slide-reviews__img _ibg">
-										<img src="/img/reviews/client-1.jpg" alt="client">
+										<img src="https://rkozhan.github.io/ace-studio/img/reviews/client-1.jpg" alt="client">
 									</div>
 									<div class="slide-reviews__name">Believable</div>
 									<div class="slide-reviews__text">
@@ -321,7 +317,7 @@
 
 						<div class="news__item item-news">
 							<a class="item-news__img _ibg">
-								<img src="/img/news/n-1.jpg" alt="">
+								<img src="https://rkozhan.github.io/ace-studio/img/news/n-1.jpg" alt="">
 								<div class="item-news__date">06 Feb 2020</div>
 							</a>
 							<div class="item-news__title"><a href="#"> Teration in some form, by injected humour</a></div>
@@ -331,7 +327,7 @@
 
 						<div class="news__item item-news">
 							<a class="item-news__img _ibg">
-								<img src="/img/news/n-2.jpg" alt="">
+								<img src="https://rkozhan.github.io/ace-studio/img/news/n-2.jpg" alt="">
 								<div class="item-news__date">08 Feb 2020</div>
 							</a>
 							<div class="item-news__title"><a href="#"> Teration in some form, by injected humour</a></div>
@@ -367,7 +363,7 @@
 							<div class="intouch__col_wrapper">
 
 								<div class="intouch__img _ibg">
-									<img src="/img/intouch/contact-img.jpg" alt="intouch">
+									<img src="https://rkozhan.github.io/ace-studio/img/intouch/contact-img.jpg" alt="intouch">
 									<div class="intouch__overlay">
 										<div class="intouch__overlay_title">Best <br> photo <br> studio</div>
 										<a href="#" class="intouch__overlay_link">Contact Us</a>
@@ -387,7 +383,7 @@
 
 				<div class="footer__sub-col">
 					<a href="#" class="footer__logo">
-						<img src="/img/footer/info-logo.png" alt="logo">
+						<img src="https://rkozhan.github.io/ace-studio/img/footer/info-logo.png" alt="logo">
 					</a>
 					<div class="footer__text">It is a long established fact that a reader will be distracted by the
 						readable content of a page when looking at its layout. The point of</div>
