--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
 		<!----------------------------------------SCRIPTS  ------------------------------------------------------------------------------>
 		<script src="src/swiper/swiper-bundle.min.js"></script>
-		<script src="js/_swiper.js"></script>
+		<script src="js/swiper.js"></script>
 		<!--script src="js/menu-links.js"></!--script-->
 		<script src="js/menu-links-min.js"></script>
 		<script src="js/burger.js"></script>
