--- a/index.html
+++ b/index.html
@@ -438,7 +438,11 @@
 
 			</div>
 			<div class="footer__copy">
-				<p>© 2021 Rkozhan studio</p>
+				<p>© 2021 Ace studio</p>
+				<div class="coding"
+					style="display: inline-block; font-size: 12px; letter-spacing: 1.5px; text-align: right; position: relative;bottom: 0;float: right;background-color: #000000aa;color: #ccc;z-index: 5;padding: 0 3px; line-height: 1em;">
+					coding</br>
+					by rkozhan</div>
 			</div>
 		</footer>
 
